@@ -12,8 +12,10 @@ ufw (0.35.1) UNRELEASED; urgency=medium
   * support concurrent updates (LP: #1204579, Closes: 686248)
   * conf/before6.rules: adjust ufw6-before-output rules for echo-reply and
     echo-request (LP: #1633698)
+  * src/backend_iptables.py: unconditionally reload user rules with 'delete'
+    (LP: #1933117)
 
- -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 04 Apr 2018 16:41:35 -0500
+ -- Jamie Strandboge <jdstrand@ubuntu.com>  Sat, 18 Sep 2021 19:46:03 -0500
 
 ufw (0.35) RELEASED; urgency=medium
 
